--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5"
   },
